--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -1,2 +1,12 @@
-.contents
-  こんにちは
+.top-contents
+  %img{:src => "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2G3C1T2di0rwvXIU6hGwF30rgahZ-SCMDoF5CzCyN9onG-rAJDQ",:width => '100%', :height => '690',}/
+
+
+
+.middle-contents
+
+
+
+
+.bottom-contents
+  %img{:src =>"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRsdqVUsD6mUJtqeX9iGK9VrDEx_zpamNX9TrPSSwApQtdrSJBWhA",:width => '100%', :height => '200'}/
