make top-contents view

--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -1,6 +1,14 @@
 .top-contents
-  %img{:src => "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2G3C1T2di0rwvXIU6hGwF30rgahZ-SCMDoF5CzCyN9onG-rAJDQ",:width => '100%', :height => '690',}/
-
+  %header
+    %h1 Owners
+    %navi
+      %ul.h-navi
+        %li Owenersについて
+        %li 使い方
+        %li 森 維志さん
+    .lead
+      %h2.sprite-2.message01 とっておきの、オーナーになろう
+      %h2.sprite-2.message02 own your favorite, this is yours.
 
 
 .middle-contents
