--- a/app/assets/stylesheets/project.scss
+++ b/app/assets/stylesheets/project.scss
@@ -1,10 +1,73 @@
 .top-contents {
-  background: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2G3C1T2di0rwvXIU6hGwF30rgahZ-SCMDoF5CzCyN9onG-rAJDQ);
+  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRN1IQxDFJfvKDjVXC_YBON7MeW-s4hXE1VgOwXMKOZpgdAMLMl);
+  background-size: cover;
+  height: 640px;
 
 }
 
+.top-contents header {
+  width: 1100px;
+  position: relative;
+  margin: 0 auto;
+
+}
+
+.top-contents h1 {
+  color: white;
+  width: 110px;
+  height: 28px;
+  position: absolute;
+  top: 16px;
+  left: 0px;
+}
+
+.h-navi {
+  position: absolute;
+  right: 0;
+  top: 30px;
+  color: white;
+}
+
+.h-navi li {
+  display: inline-block;
+  margin-right: 40px;
+  position: relative;
+  line-height: 0;
+
+}
+
+.message01 {
+  overflow: hidden;
+  // text-indent: 100%;
+  font-size: 40px;
+  white-space: nowrap;
+  display: block;
+  width: 751px;
+  position: absolute;
+  top: 260px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.message02 {
+  overflow: hidden;
+  // text-indent: 100%;
+  white-space: nowrap;
+  display: block;
+  width: 751px;
+  position: absolute;
+  top: 350px;
+  left: 60%;
+  transform: translateX(-50%);
+}
+
+.top-contents h2 {
+  color: white;
+}
+
+
 .middle-contents {
-  background-color: white;
+  background-color: red;
   height: calc(100vh - 30vh);
   width: 100%;
   overflow-y: scroll;
