--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -3,9 +3,11 @@
     %h1 Owners
     %navi
       %ul.h-navi
-        %li Owenersについて
+        %li
+          %i.sprite-2x.icon-q Owenersについて
         %li 使い方
-        %li 森 維志さん
+        %li 会員登録
+        %li ログイン
     .lead
       %h2.sprite-2.message01 とっておきの、オーナーになろう
       %h2.sprite-2.message02 own your favorite, this is yours.
