--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -1,26 +1,4 @@
-.top-contents
-  %header
-    %h1
-      %a{href: "/"} Owners
-    %navi
-      %ul.h-navi
-        %li
-          %i{class: "fa.fa-question-circle-o"}
-            %a{href: "/about"} Owenersについて
-        %li
-          %i{class: "fa.fa-question-circle-o"}
-            %a{href: "/about"}使い方
-        %li
-          %i{class: "fa.fa-question-circle-o"}
-            %a{href: "/about"}会員登録
-        %li
-          %i{class: "fa.fa-question-circle-o"}
-            %a{href: "/about"}ログイン
-
-    .lead
-      %h2.sprite-2.message01 とっておきの、オーナーになろう
-      %h2.sprite-2.message02 own your favorite, this is yours.
-      %a.about-btn{:href => "#message"} OWNERSについて
+=render partial: "top-contents"
 
 
 .middle-contents
