make bottom-contents view

--- a/app/views/projects/_top-contents.html.haml
+++ b/app/views/projects/_top-contents.html.haml
@@ -1,7 +1,9 @@
 .top-contents
   %header
     %h1
-      %a{href: "/"} Owners
+      %a{href: "/"}
+        %i{class: "title"}
+          Owners
     %navi
       %ul.h-navi
         %li
@@ -9,14 +11,17 @@
             %i{class: "fa fa-pencil-square-o"}
               Owenersについて
         %li
-          %i{class: "fa.fa-question-circle-o"}
-            %a{href: "/about"}使い方
+          %a{href: "/about"}
+            %i{class: "fa.fa-question-circle-o"}
+              使い方
         %li
-          %i{class: "fa.fa-question-circle-o"}
-            %a{href: "/about"}会員登録
+          %a{href: "/about"}
+            %i{class: "fa.fa-question-circle-o"}
+              会員登録
         %li
-          %i{class: "fa.fa-question-circle-o"}
-            %a{href: "/about"}ログイン
+          %a{href: "/about"}
+            %i{class: "fa.fa-question-circle-o"}
+              ログイン
 
     .lead
       %h2.sprite-2.message01 とっておきの、オーナーになろう
