--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -7,4 +7,21 @@
 
 
 .bottom-contents
-  %img{:src =>"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRsdqVUsD6mUJtqeX9iGK9VrDEx_zpamNX9TrPSSwApQtdrSJBWhA",:width => '100%', :height => '200'}/
+  %footer
+    %h2
+      %i.title
+        Owners
+    %navi
+      %ul.f-navi
+        %li
+          %a{href: "/about"} お問い合わせ
+        %li
+          %a{href: "/about"} 利用規約
+        %li
+          %a{href: "/about"} よくある質問
+        %li
+          %a{href: "/about"} プライバシーポリシー
+        %li
+          %a{href: "/about"} 運営会社
+        %li
+          %a{href: "/about"} 特定商取引法に関する表示
