--- a/app/assets/stylesheets/_reset.scss
+++ b/app/assets/stylesheets/_reset.scss
@@ -55,6 +55,10 @@ fieldset,
 img {
     border:0;
 }
+
+li {
+  list-style: none;
+}
 /*
     TODO think about hanlding inheritence differently, maybe letting IE6 fail a bit...
 */
