partial templete bottom-contents

--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -1,27 +1,5 @@
 =render partial: "top-contents"
 
-
 .middle-contents
 
-
-
-
-.bottom-contents
-  %footer
-    %h2
-      %i.title
-        Owners
-    %navi
-      %ul.f-navi
-        %li
-          %a{href: "/about"} お問い合わせ
-        %li
-          %a{href: "/about"} 利用規約
-        %li
-          %a{href: "/about"} よくある質問
-        %li
-          %a{href: "/about"} プライバシーポリシー
-        %li
-          %a{href: "/about"} 運営会社
-        %li
-          %a{href: "/about"} 特定商取引法に関する表示
+=render partial: "bottom-contents"
