--- a/app/assets/stylesheets/project.scss
+++ b/app/assets/stylesheets/project.scss
@@ -1,3 +1,25 @@
+body {
+  position: relative;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: 1;
+  box-sizing: border-box;
+
+  .wrapper {
+    position: relative;
+
+    .container {
+      width: 100%;
+    min-width: 1100px;
+    overflow: hidden;
+    box-sizing: border-box;
+
+
+
+
+
+
+
 .middle-contents {
   height: calc(100vh - 30vh);
   width: 100%;
@@ -53,6 +75,10 @@
         width: 240px;
         margin: 0 auto;
       }
+    }
+  }
+}
+
     }
   }
 }
