--- a/app/assets/stylesheets/top-contents.scss
+++ b/app/assets/stylesheets/top-contents.scss
@@ -13,7 +13,7 @@
 }
 
 .top-contents h1 {
-  color: white;
+  color: black;
   width: 110px;
   height: 28px;
   position: absolute;
@@ -25,7 +25,7 @@
   position: absolute;
   right: 0;
   top: 30px;
-  color: white;
+  color: black;
 }
 
 .h-navi li {
