fix view hero contents

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,5 +2,5 @@
 @import "./reset";
 @import "./project";
 @import "font-awesome";
-@import "./top-contents";
-@import "./bottom-contents";
+@import "./hero";
+@import "./footer";
