--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -3,7 +3,7 @@
   .wrapper
     .container
 
-=render partial: "top-contents"
+=render partial: "hero"
 
 / .middle-contents
 /   #message
@@ -43,4 +43,4 @@
 /           生産者が育てた商品があなたの元へ届きます
 
 
-/ =render partial: "bottom-contents"
+=render partial: "footer"
