--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,16 +1,14 @@
-.bottom-contents {
+.footer {
   background-color: black;
-  height: 200px;
-  text-align: center;
 }
 
-.bottom-contents footer {
+.footer {
   width: 1100px;
   margin: 0 auto;
   position: relative;
 }
 
-.bottom-contents h2 {
+.footer h2 {
   color: white;
   font-size: 40px;
   text-align: center;
