--- a/app/assets/stylesheets/hero.scss
+++ b/app/assets/stylesheets/hero.scss
@@ -1,39 +1,52 @@
-.top-contents {
+.hero {
   background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRN1IQxDFJfvKDjVXC_YBON7MeW-s4hXE1VgOwXMKOZpgdAMLMl);
   background-size: cover;
-  height: 640px;
+  height: 690px;
+  width: 100%;
+  overflow: hidden;
+  z-index: 0;
+
+  i {
+    color: white;
+    height: 30px;
+    width: 30px;
+  }
 
 }
 
-.top-contents header {
+.header {
   width: 1100px;
   position: relative;
   margin: 0 auto;
 
-}
-
-.top-contents h1 {
-  color: black;
-  width: 110px;
-  height: 28px;
-  position: absolute;
-  top: 16px;
-  left: 0px;
+  h1 {
+    color: white;
+    font-size: 40px;
+    font-style: oblique;
+    font-weight: bold;
+    position: absolute;
+    top: 16px;
+    left: 0px;
+  }
 }
 
 .h-navi {
   position: absolute;
   right: 0;
   top: 30px;
-  color: black;
-}
 
-.h-navi li {
-  display: inline-block;
-  margin-right: 40px;
-  position: relative;
-  line-height: 0;
 
+  li {
+    display: inline-block;
+    margin-right: 40px;
+    position: relative;
+    line-height: 0;
+
+      a {
+        color: white;
+        text-decoration: none;
+      }
+  }
 }
 
 .message01 {
@@ -42,11 +55,12 @@
   font-size: 40px;
   white-space: nowrap;
   display: block;
-  width: 751px;
+  width: 950px;
   position: absolute;
   top: 260px;
   left: 55%;
   transform: translateX(-50%);
+  letter-spacing: 0.5em;
 }
 
 .message02 {
@@ -57,19 +71,15 @@
   width: 751px;
   position: absolute;
   top: 350px;
-  left: 65%;
+  left: 62%;
+  font-size: 30px;
   transform: translateX(-50%);
 }
 
-.top-contents h2 {
+.hero h2 {
   color: white;
 }
 
-.top-contents i {
-  color: white;
-  height: 30px;
-  width: 30px;
-}
 
 .about-btn {
   border-style: solid;
@@ -81,6 +91,7 @@
   width: 300px;
   display: block;
   text-align: center;
+  text-decoration: none;
   height: 65px;
   font-size: 1.3125rem;
   line-height: 65px;
