make partial message view

--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -5,42 +5,6 @@
 
 =render partial: "hero"
 
-/ .middle-contents
-/   #message
-/     %p.text01
-/       Ownersは、全国からとっておきの「オーナー制度」と集めた
-/       %br/
-/       プラットフォームサービスです。
-/     %h2
-/       %span OWNERS 利用ステップ
-/     .step
-/       .process
-/         %i.sprite-2x.icon-step01
-/         %h3
-/           %span 1.
-/           プランを探す
-/         %p 生産者が提供しているプランからお気に入りのオーナー制度をみつけてください
-/       .process
-/         %i.sprite-2x.icon-step02
-/         %h3
-/           %span 2.
-/           オーナーになる
-/         %p 商品の送り先など必要な情報を入力して現在募集中のオーナー制度にとうろくしてくだい
-/       .process
-/         %i.sprite-2x.icon-step03
-/         %h3
-/           %span 3.
-/           プロセスを楽しむ
-/         %p 生産者から届く生産状況など様々な情報をOWNERS上でチェックすることができます。
-/       .process
-/         %i.sprite-2x.icon-step04
-/         %h3
-/           %span 4.
-/           商品が届く
-/         %p
-/           お待たせしました!
-/           %br>/
-/           生産者が育てた商品があなたの元へ届きます
-
+=render partial: "message"
 
 =render partial: "footer"
