make partial item-bg view

--- a/app/views/projects/_item-bg.html.haml
+++ b/app/views/projects/_item-bg.html.haml
@@ -9,4 +9,15 @@
             %img{:src => "https://s3-ap-northeast-1.amazonaws.com/owners-pro/Product/71/main_image/w340h223_20862262_1360004164097970_743720065_o.jpg"}/
           %h2 【第２期】溢れる果汁とりんご本来の味。信州の丘の上で育った２つの「シナノ」と「完熟サンふじ」
           .info
+            %p.place
+              %i.sprite-2x.icon-pin
+              長野県下伊那郡豊丘村
+            %p.price
+              %i.sprite-2x.icon-bag
+              ¥10,000
           .owner-info-hover{:style => "opacity: 1; display: none;"}
+            %figure
+              %img{:alt => "", :height => "110", :s3 => "1", :src => "https://s3-ap-northeast-1.amazonaws.com/owners-pro/Partner/24/profile_image/w110h110_haraprofile.png", :ssl => "1", :width => "110"}/
+            %p.shop-name 丘の上ファーム原農園
+            .partner-message
+              %p 信州りんごの美味しい体験をお届けします
