make view partial mypage-left scss

--- a/app/views/users/_mypage-left.html.haml
+++ b/app/views/users/_mypage-left.html.haml
@@ -2,7 +2,7 @@
   .mypage-left
     %section.menu
       %figure.member-photo
-        %img{:src => "/images/noimage-square.png?1460076895"}/
+        %img{:src => "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRssxYzTzGrQASv8DpXw6PQ3itMPTSghdas7vadd2qKMzWEESzq"}/
       %h2 森 維志
       %ul.side-menu
         %li
