--- a/app/views/users/_mypage-content.html.haml
+++ b/app/views/users/_mypage-content.html.haml
@@ -1,6 +1,6 @@
 .mypage-content
   .news-area
-    %section.news-offcial
+    %section.news-official
       %h2 運営からのお知らせ
       .w-box
         .scroll-box
@@ -8,5 +8,5 @@
             %dt 2017/08/20
             %dd 和歌山県から「紀州伊勢海老」プランが公開されました！
           %dl
-            %dl 2017/08/20
+            %dt 2017/08/20
             %dd 南信州から第2期「りんご」オーナープランが公開されました！
