--- a/app/views/users/_mypage-content.html.haml
+++ b/app/views/users/_mypage-content.html.haml
@@ -8,5 +8,13 @@
             %dt 2017/08/20
             %dd 和歌山県から「紀州伊勢海老」プランが公開されました！
           %dl
-            %dt 2017/08/20
+            %dl 2017/08/20
             %dd 南信州から第2期「りんご」オーナープランが公開されました！
+    %section.latest-news
+      %h2 新着記事
+      .w-box
+        .scroll-box
+          %p 記事がありません。
+  %section.products-area
+    %h2 契約中のプラン
+    %article.products
