fix view mypage-contents.scss and add  partial footer

--- a/app/assets/stylesheets/user/mypage-content.scss
+++ b/app/assets/stylesheets/user/mypage-content.scss
@@ -2,6 +2,7 @@
   width: 820px;
   padding-top: 50px;
   padding-bottom: 80px;
+  padding-right: 100px;
   float: right;
 }
 
@@ -69,30 +70,3 @@
   padding: 20px;
   box-sizing: border-box;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
