--- a/app/views/projects/_hero-single.html.haml
+++ b/app/views/projects/_hero-single.html.haml
@@ -26,5 +26,10 @@
 
 
     .lead
-      %h2.sprite-2.message01 【第2期】溢れる果汁とりんご本来の味。信州の丘の上で育った2つの「シナノ」と「完熟サンふじ」
+      %h2.sprite-2.message01
+        【第2期】溢れる果汁とりんご本来の味。
+        %br>/
+        信州の丘の上で育った
+        %br>/
+        2つの「シナノ」と「完熟サンふじ」
 
