make view partial product-data

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,4 +11,4 @@
 @import "./user/mypage-left";
 @import "./user/mypage-content";
 @import "./project/hero-single";
-
+@import "./project/product-data";
