make view partial product-content.scss

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,3 +12,4 @@
 @import "./user/mypage-content";
 @import "./project/hero-single";
 @import "./project/product-data";
+@import "./project/product-content";
