add view price-area.paper

--- a/app/views/projects/_product-content.html.haml
+++ b/app/views/projects/_product-content.html.haml
@@ -201,6 +201,78 @@
       %p
         全国の皆さまからのご登録、一同心からお待ちしています！
 
+  .price-area.paper
+  %h2{:style => "margin-bottom: 0px;"} オーナー登録費
+  %p{:style => "color: #2d1d09;text-align: center;"} (消費税・送料込)
+  %p.price{:style => "margin-bottom: 10px;"}
+    ¥
+    %span 10,000
+  %p.detail
+    提供商品（最低保証量）
+    %br/
+    %br/
+    ①シナノスイート
+    %br/
+    （1箱9~11個）
+    %br/
+    ②シナノゴールド
+    %br/
+    （1箱9~11個）
+    %br/
+    ③完熟サンフジ
+    %br/
+    （1箱9~11個）
+    %br/
+    %br/
+    ※収穫時のりんごサイズにより数量が変わります。
+    %br/
+    %br/
+    ※蜜入りはサンふじのみで、状態により差が出ることもございます。
+    %br/
+    %br/
+    ▼登録特典
+    %br/
+    現地での収穫体験にご参加頂けます。
+    %br/
+    ※事前予約制、詳細は別途ご案内
+    %br/
+    %br/
+    ▼お届け時期
+    %br/
+    季節に応じて年3回
+    %br/
+    %br/
+    10月中旬~11月初旬
+    %br/
+    \:シナノゴールド
+    %br/
+    11月下旬~12月初旬
+    %br/
+    \:完熟サンふじ
+    %br/
+    %br/
+    ▼募集定員
+    %br/
+    100人
+    %br/
+    %br/
+    ▼募集期間：
+    %br/
+    2017年8月15日~10月5日
+    %br/
+    %br/
+    ▼契約期間：
+    %br/
+    登録後から、最終商品お届けの翌月末まで
+    %br/
+    %br/
+    ▼登録金額：
+    %br/
+    10,000円（消費税・送料込）
+    %br/
+    %br/
+    ※沖縄やその他離島へのお届けの場合、別途追加送料を頂く場合がございます。お届け先に応じて、オーナー様に個別でご連絡致します。
+
 
 
 
