--- a/app/assets/stylesheets/project/product-content.scss
+++ b/app/assets/stylesheets/project/product-content.scss
@@ -22,3 +22,67 @@
     margin-left: 40px;
   }
 }
+
+.right-column {
+  width: 300px;
+  float: right;
+}
+
+.paper {
+  width: 100%;
+  padding: 30px;
+  margin-bottom: 30px;
+  border: 1px solid #d2cec7;
+  box-shadow: 0px 5px 0px 0px rgba(210, 260, 199, 0.2);
+  position: relative;
+  box-sizing: border-box;
+  margin-top: 15px;
+
+  h2 {
+    text-align: center;
+    font-size: 1.125rem;
+  }
+}
+
+.price {
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.125rem;
+
+  span {
+    font-size: 1.75rem;
+    font-family: sans-serif;
+    font-weight: 700;
+  }
+}
+
+.detail {
+  text-align: left;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
