make view partial schedule-area

--- a/app/views/projects/_product-content.html.haml
+++ b/app/views/projects/_product-content.html.haml
@@ -274,6 +274,25 @@
         %br/
         ※沖縄やその他離島へのお届けの場合、別途追加送料を頂く場合がございます。お届け先に応じて、オーナー様に個別でご連絡致します。
 
+    .schedule-area.paper
+      %h2 プランスケジュール
+      ▼お届け時期
+      %br
+      季節に応じて年3回
+      %br
+      %br
+      10月中旬~下旬
+      %br
+      \:シナノスイート
+      %br
+      10月下旬から~11月初旬
+      %br
+      \:シナノゴールド
+      %br
+      11月下旬~12月初旬
+      %br
+      \:完熟サンふじ
+      %br
 
 
 
