--- a/app/views/projects/_product-content.html.haml
+++ b/app/views/projects/_product-content.html.haml
@@ -294,9 +294,19 @@
       \:完熟サンふじ
       %br
 
+    .blog-area.paper
+      %h2 コミュニケーションページ
+      %dl
+        %dt 2017/08/26
+        %dd
+          %i.sprite-2x.icon-pen-b
+          %a{:href => "/"} オーナーの皆様、第2期もよろしくお願いします！
 
+    %p.law
+      %a{:href => "/"} 特定商取引に関する表記
 
-
+    .order
+      %a.btn-green{:href => "/"} お申込み
 
 
 
