make article controller

--- a/app/assets/stylesheets/project/hero.scss
+++ b/app/assets/stylesheets/project/hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRN1IQxDFJfvKDjVXC_YBON7MeW-s4hXE1VgOwXMKOZpgdAMLMl);
+  background-image: url(https://s3-ap-northeast-1.amazonaws.com/owners-pro/ProductContent/748/content_image/w740h420_20862262_1360004164097970_743720065_o.jpg);
   background-size: cover;
   height: 690px;
   width: 100%;
