--- a/app/views/projects/_item-bg.html.haml
+++ b/app/views/projects/_item-bg.html.haml
@@ -1,6 +1,6 @@
-.item-bg
+#item-bg
   .items-area
-    .content
+    .contents
       / アイテムリストはここから
       %a.item-link{:href => "#"}
         %section.items
