--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,4 @@
 @import "./project/hero-single";
 @import "./project/product-data";
 @import "./project/product-content";
+@import "./article/articles";
