--- a/app/assets/stylesheets/project/item-bg.scss
+++ b/app/assets/stylesheets/project/item-bg.scss
@@ -1,9 +1,9 @@
-.item-bg {
+#item-bg {
   background: #fff;
   width: 100%;
 }
 
-.item-area .item-link {
+.items-area {
   width: 1100px;
   margin: 0 auto;
   padding-top: 30px;
@@ -11,16 +11,16 @@
   padding-bottom: 106px;
 }
 
-// .clearfix:before {
-//   content: "";
-//   display: table;
-// }
+.items-area:before {
+  content: " ";
+  display: table;
+}
 
 .item-link {
   width: 340px;
   display: block;
   float: left;
-  margin-right: 40px;
+  margin-right: 20px;
   min-height: 390px;
 }
 
@@ -80,6 +80,7 @@
   display: table;
   width: 100%;
   margin-top: 10px;
+  margin-left: 25px;
 }
 
 .place {
