--- a/app/assets/stylesheets/article/articles.scss
+++ b/app/assets/stylesheets/article/articles.scss
@@ -1,1 +1,71 @@
-#
+#article-data {
+  background: #f1eee8;
+
+  h1 {
+    display: table-cell;
+    font-size: 1.5rem;
+    vertical-align: middle;
+    padding-left: 20px;
+    padding-right: 20px;
+    height: 80px;
+  }
+}
+
+.layout-bpx {
+  width: 1100px;
+  margin: 0 auto;
+  padding: 20px 0;
+}
+
+.layout-bpx:before {
+  content: " ";
+  display: table;
+}
+
+.left-box {
+  width: 740px;
+  display: table;
+  float: left;
+}
+
+.post-date {
+  width: 120px;
+  background: #2d1d09;
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+  height: 80px;
+
+  p {
+    color: #fff;
+  }
+}
+
+.year {
+  font-family: sans-serif;
+  letter-spacing: 1px;
+  font-weight: 400;
+}
+
+.day {
+  font-size: 1.5rem;
+  font-family: sans-serif;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
