add footer article view

--- a/app/views/projects/_item-bg.html.haml
+++ b/app/views/projects/_item-bg.html.haml
@@ -1,6 +1,6 @@
 #item-bg
   .items-area
-    .contents
+    .item-contents
       / アイテムリストはここから
       %a.item-link{:href => "#"}
         %section.items
