add user registration function

--- a/app/views/projects/_hero.html.haml
+++ b/app/views/projects/_hero.html.haml
@@ -15,7 +15,7 @@
             %i.sprite-2x.icon-book
             使い方
         %li
-          %a{:href => "/about"}
+          %a{:href => "/signup"}
             %i.sprite-2x.icon-plus
             会員登録
         %li
