--- a/app/views/users/_header.html.haml
+++ b/app/views/users/_header.html.haml
@@ -17,4 +17,4 @@
           %a.sub-open{:href => "/about"}
             %i.thum
               / %img{:alt => "", :src => "/images/noimage-square.png?1460076999"}/
-          森 維志さん
+          = @user.name
