--- a/app/views/users/_header.html.haml
+++ b/app/views/users/_header.html.haml
@@ -4,17 +4,22 @@
       OWNERS
       %a{:href => "/"}
     %nav
-      %ul.h-navi
+      %ul.user-navi
         %li
           %a{:href => "/about"}
             %i.sprite-2x.icon-q-b
-          OWNERSについて
+            OWNERSについて
         %li
           %a{:href => "/about"}
             %i.sprite-2x.icon-book-b
-          使い方
+            使い方
         %li
           %a.sub-open{:href => "/about"}
             %i.thum
               / %img{:alt => "", :src => "/images/noimage-square.png?1460076999"}/
           = @user.name
+
+        %li
+          / %a{:href => "/users/#{@user.id}/edit"}
+          = link_to("編集", "/users/#{@user.id}/edit")
+
