--- a/app/views/users/_mypage-edit.html.haml
+++ b/app/views/users/_mypage-edit.html.haml
@@ -6,7 +6,7 @@
         .edit-area
           %article.clearfix
             .product-edit
-              .w-box
+              .e-box
                 %dl
                   %dt
                     名前
