--- a/app/assets/stylesheets/user/mypage-edit.scss
+++ b/app/assets/stylesheets/user/mypage-edit.scss
@@ -124,3 +124,36 @@
 //   top: 0;
 //   left: 165px;
 // }
+
+.right-column-edit {
+  width: 260px;
+  float: right;
+}
+
+.btn-parts {
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+  margin-bottom: 17px;
+}
+
+.btn-normal {
+  width: 277px;
+  border: 1px solid #427833;
+  border-radius: 5px;
+  background-color: #fff;
+  box-shadow: 0px 3px 0px 0px rgba(66, 120, 51, 0.2);
+  display: inline-block;
+  text-align: center;
+  position: relative;
+  text-decoration: none;
+  height: 40px;
+  line-height: 40px;
+  font-size: 0.875rem;
+  padding: 0 10px;
+}
+
+.btn-green {
+  height: 40px;
+  line-height: 40px;
+}
