--- a/app/views/users/_mypage-edit.html.haml
+++ b/app/views/users/_mypage-edit.html.haml
@@ -3,51 +3,52 @@
     .center-column
       %section.edit-area
         %h2 アカウント設定
-        .edit-area
-          %article.clearfix
-            .product-edit
-              .e-box
-                %dl
-                  %dt
-                    名前
-                    %span ※
-                  %dd
-                    .input
-                      .input.text
-                        %input#OwnerSei.jq-placeholder.w100p.style02{:name => "", :placeholder => "名前", :title => "名前", :type => "string", :value => ""}/
-                %dl
-                  %dt
-                    メールアドレス
-                    %span ※
-                  %dd
-                    .input
-                      .input.email
-                        %input#OwnerEmail.jq-placeholder.w100p.style02{:maxlength => "255", :name => "", :placeholder => "メールアドレス", :title => "名前", :type => "string", :value => ""}/
-                %dl
-                  %dt
-                    パスワード
-                    %span ※
-                  %dd
-                    .input
-                      .input.password
-                        %input#OwnerPassword.jq-placeholder.w100p.style02{:name => "", :placeholder => "password", :title => "名前", :type => "password", :value => ""}/
-                %dl
-                  %dt
-                    プロフィール画像
-                  %dd
-                    .p-right
-                      %div{"upload-button" => ""}
-                        .upload-button
-                          %i.sprite-2x.icon-upload
-                            ファイルを選択
-                          .input.file
-                            %input#OwnerProfileImage{:name => "", :type => "file"}/
-                          %input#uv.upload-value{:name => "", :type => "text"}/
+        = form_tag("/users/#{@user.id}/update") do
+          .edit-area
+            %article.clearfix
+              .product-edit
+                .e-box
+                  %dl
+                    %dt
+                      名前
+                      %span ※
+                    %dd
+                      .input
+                        .input.text
+                          %input#OwnerSei.jq-placeholder.w100p.style02{:name => "name", :placeholder => "名前", :title => "名前", :type => "string", :value => @user.name}/
+                  %dl
+                    %dt
+                      メールアドレス
+                      %span ※
+                    %dd
+                      .input
+                        .input.email
+                          %input#OwnerEmail.jq-placeholder.w100p.style02{:maxlength => "255", :name => "email", :placeholder => "メールアドレス", :title => "名前", :type => "string", :value => @user.email}/
+                  / %dl
+                  /   %dt
+                  /     パスワード
+                  /     %span ※
+                  /   %dd
+                  /     .input
+                  /       .input.password
+                  /         %input#OwnerPassword.jq-placeholder.w100p.style02{:name => "password", :placeholder => "password", :title => "名前", :type => "password", :value => ""}/
+                  %dl
+                    %dt
+                      プロフィール画像
+                    %dd
+                      .p-right
+                        %div{"upload-button" => ""}
+                          .upload-button
+                            %i.sprite-2x.icon-upload
+                              ファイルを選択
+                            .input.file
+                              %input#OwnerProfileImage{:name => "image", :type => "file"}/
+                            %input#uv.upload-value{:name => "image", :type => "text"}/
 
-    .right-colum-edit
-      .w-box.clearfix{:style => "margin-top: 30px;"}
-        .btn-parts
-          %a.btn-normal{:href => ""} 戻る
-        .btn-parts{:style => "margin-bottom: 0;"}
-          %input#OwnerId{:name => "", :type => "hidden", :value => ""}/
-          %input#account_submit.btn-green{:name => "", :type => "submit", :value => "更新"}/
+          .right-colum-edit
+            .w-box.clearfix{:style => "margin-top: 30px;"}
+              .btn-parts
+                %a.btn-normal{:href => ""} 戻る
+              .btn-parts{:style => "margin-bottom: 0;"}
+                %input#OwnerId{:name => "", :type => "hidden", :value => ""}/
+                %input#account_submit.btn-green{:name => "", :type => "submit", :value => "更新"}/
