--- a/app/views/projects/_hero.html.haml
+++ b/app/views/projects/_hero.html.haml
@@ -19,7 +19,7 @@
             %i.sprite-2x.icon-plus
             会員登録
         %li
-          %a{:href => "/about"}
+          %a{:href => "/login"}
             %i.sprite-2x.icon-login
             ログイン
 
