--- a/app/views/users/login_form.html.haml
+++ b/app/views/users/login_form.html.haml
@@ -7,10 +7,10 @@
         %input{:id => "", :name => "data[_Token][key]", :type => "hidden", :value => ""}/
       .input
         .input.text
-          %input#last-name.jq-placeholder.style01.w300{:name => "email", :value => "", :placeholder => "メールアドレス", :style => "color: silver;", :type => "string"}/
+          %input#last-name.jq-placeholder.style01.w300{:name => "email", :value => @email, :placeholder => "メールアドレス", :style => "color: silver;", :type => "string"}/
       .input
         .input.password
-          %input#last-name.jq-placeholder.style01.w300{:name => "password", :placeholder => "パスワード", :style => "color: silver;", :type => "password"}/
+          %input#last-name.jq-placeholder.style01.w300{:name => "password", :placeholder => "パスワード", :style => "color: silver;", :type => "password", :value => @password}/
         %label{:style => "font-size: 11px;"}
 
       %input#signup_submit.submit.w300.green{:name => "", :type => "submit", :value => "ログイン"}/
