--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -13,7 +13,7 @@
           %input#last-name.jq-placeholder.style01.w300{:name => "email", :value => @user.email, :placeholder => "メールアドレス", :style => "color: silver;", :type => "string"}/
       .input
         .input.password
-          %input#last-name.jq-placeholder.style01.w300{:name => "", :placeholder => "パスワード", :style => "color: silver;", :type => "password"}/
+          %input#last-name.jq-placeholder.style01.w300{:name => "password", :placeholder => "パスワード", :style => "color: silver;", :type => "password"}/
         %label{:style => "font-size: 11px;"}
         ※パスワードは７文字以上でご入力下さい。
 
