--- a/app/views/users/_header.html.haml
+++ b/app/views/users/_header.html.haml
@@ -16,7 +16,8 @@
           %a{:href => "/about"}
             %i.sprite-2x.icon-book-b
             使い方
-        %li
-          = link_to("編集", "/users/#{@current_user.id}/edit")
+        - if @user.id == @current_user.id
+          %li
+            = link_to("編集", "/users/#{@current_user.id}/edit")
         %li
           = link_to("ログアウト", "/logout", {method: :post})
