--- a/app/views/users/_mypage-edit.html.haml
+++ b/app/views/users/_mypage-edit.html.haml
@@ -3,7 +3,7 @@
     .center-column
       %section.edit-area
         %h2 アカウント設定
-        = form_tag("/users/#{@user.id}/update") do
+        = form_tag("/users/#{@user.id}/update", {multipart: true}) do
           .edit-area
             %article.clearfix
               .product-edit
@@ -43,7 +43,7 @@
                               ファイルを選択
                             .input.file
                               %input#OwnerProfileImage{:name => "image", :type => "file"}/
-                            %input#uv.upload-value{:name => "image", :type => "text"}/
+                            %input#uv.upload-value{:name => "image", :type => "file"}/
 
           .right-colum-edit
             .w-box.clearfix{:style => "margin-top: 30px;"}
