--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,10 +1,10 @@
 #container.mypage-area
-
   =render partial: 'header'
+  #mypage
 
-  =render partial: 'mypage-left'
+    =render partial: 'mypage-left'
 
-  =render partial: 'mypage-content'
+    =render partial: 'mypage-content'
 
   =render partial: 'share/footer'
 
