--- a/app/assets/stylesheets/user/header.scss
+++ b/app/assets/stylesheets/user/header.scss
@@ -23,6 +23,12 @@
     font-size: 30px;
     font-style: oblique;
     font-weight: bold;
+
+    a {
+      text-decoration: none;
+      margin-left: 47px;
+      color: black;
+    }
   }
 }
 
