--- a/app/assets/stylesheets/user/mypage-left.scss
+++ b/app/assets/stylesheets/user/mypage-left.scss
@@ -61,6 +61,7 @@
     color: #2d1d09;
     display: block;
     padding: 12px 0 12px 20px;
+    text-decoration: none;
   }
 }
 
@@ -91,7 +92,7 @@
   margin-bottom: 30px;
 }
 
-.style02 {
+.style002 {
   line-height: 1.4;
   border: 2px solid #d2cec7;
   border-radius: 5px;
