meke view order new

--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,5 +1,5 @@
 #container.mypage-area
-  =render partial: 'header'
+  =render partial: 'share/header'
   #mypage
 
     =render partial: 'mypage-left'
