--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,4 +17,4 @@
 @import "./user/signup";
 @import "./user/mypage-edit";
 @import "./project/project-new";
-@import "./order/order-new";
+@import "./order/order-index";
