--- a/app/views/projects/_product-content.html.haml
+++ b/app/views/projects/_product-content.html.haml
@@ -306,7 +306,7 @@
       %a{:href => "/"} 特定商取引に関する表記
 
     .order
-      %a.btn-green{:href => "/"} お申込み
+      %a.btn-green{:href => "/projects/#{@project.id}/orders"} お申込み
 
 
 
