--- a/app/views/projects/_product-data.html.haml
+++ b/app/views/projects/_product-data.html.haml
@@ -15,4 +15,4 @@
           月
           %span 5
           日
-    %a.btn-green{:href => "/"} お申込み
+    %a.btn-green{:href => "/projects/#{@project.id}/orders"} お申込み
